--- a/index.html
+++ b/index.html
@@ -11,81 +11,81 @@
   <div class="calculator">
    
     <div class="display">
-      <div class="input">10+10</div>
-      <div class="result">20</div>
+      <div class="input" id="input">0</div>
+      <div class="result">0</div>
     </div>
 
     <div class="container">
 
       <div class="row">
         <div class="col">
-          <div class="item bg-white">AC</div>
+          <div class="item bg-white" onclick="enter('AC')">AC</div>
         </div>
         <div class="col">
-          <div class= "item bg-white">^</div>
+          <div class= "item bg-white" onclick="enter('^')">^</div>
         </div>
         <div class="col">
-          <div class="item bg-white">%</div>
+          <div class="item bg-white" onclick ="enter('%')">%</div>
         </div>
         <div class="col">
-          <div class="item bg-yellow">/</div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <div class="item">7</div>
-        </div>
-        <div class="col">
-          <div class="item">8</div>
-        </div>
-        <div class="col">
-          <div class="item">9</div>
-        </div>
-        <div class="col">
-          <div class="item bg-yellow">x</div>
+          <div class="item bg-yellow" onclick="enter('/')">/</div>
         </div>
       </div>
 
       <div class="row">
         <div class="col">
-          <div class="item">4</div>
+          <div class="item" onclick="enter('7')">7</div>
         </div>
         <div class="col">
-          <div class="item">5</div>
+          <div class="item" onclick="enter('8')">8</div>
         </div>
         <div class="col">
-          <div class="item">6</div>
+          <div class="item" onclick="enter('9')">9</div>
         </div>
         <div class="col">
-          <div class="item bg-yellow">-</div>
+          <div class="item bg-yellow" onclick="enter('x')">x</div>
         </div>
       </div>
 
       <div class="row">
         <div class="col">
-          <div class="item">1</div>
+          <div class="item" onclick="enter('4')">4</div>
         </div>
         <div class="col">
-          <div class="item">2</div>
+          <div class="item" onclick="enter('5')">5</div>
         </div>
         <div class="col">
-          <div class="item">3</div>
+          <div class="item" onclick="enter('6')">6</div>
         </div>
         <div class="col">
-          <div class="item bg-yellow">+</div>
+          <div class="item bg-yellow" onclick="enter('-')">-</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="item" onclick="enter('1')">1</div>
+        </div>
+        <div class="col">
+          <div class="item" onclick="enter('2')">2</div>
+        </div>
+        <div class="col">
+          <div class="item" onclick="enter('3')">3</div>
+        </div>
+        <div class="col">
+          <div class="item bg-yellow" onclick="enter('+')">+</div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-2">
-          <div class="item">0</div>
+          <div class="item" onclick="enter('0')">0</div>
         </div>
         <div class="col">
-          <div class="item">.</div>
+          <div class="item" onclick="enter('.')">.</div>
         </div>
         <div class="col">
-          <div class="item bg-yellow">=</div>
+          <div class="item bg-yellow" onclick="calculate()">=</div>
         </div>
       </div>
       
